<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_time_alarm"
            android:layout_marginBottom="@dimen/activity_margin"
            android:textSize="16sp"
            android:textStyle="bold"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
    >
        <ImageButton
                android:id="@+id/btn_once_date"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range_black"
                android:contentDescription="@string/nothing"/>

        <TextView
                android:id="@+id/tv_once_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_date"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
    >
        <ImageButton
                android:id="@+id/btn_once_time"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time_black"
                android:contentDescription="@string/nothing"/>

        <TextView
                android:id="@+id/tv_once_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_time"
        />
    </LinearLayout>

    <EditText
            android:id="@+id/edt_once_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:hint="@string/alarm_message"
            android:inputType="text"
            tools:ignore="Autofill"/>

    <Button
            android:id="@+id/btn_set_once_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="@string/set_one_time_alarm"
    />

    <TextView
            android:text="@string/repeating_alarm"
            android:layout_marginBottom="@dimen/activity_margin"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageButton
                android:id="@+id/btn_repeating_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time_black"
                tools:ignore="ContentDescription"/>
        <TextView
                android:id="@+id/tv_repeating_time"
                android:text="@string/alarm_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
            android:id="@+id/edt_repeating_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:hint="@string/alarm_message"
            android:inputType="text"
            tools:ignore="Autofill"/>

    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btn_cancel_repeating_alarm"
                android:layout_weight="0.5"
                android:text="@string/cancel_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_set_repeating_alarm"
                android:layout_weight="0.5"
                android:text="@string/set_repeating_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>